Fixing spacing between sender, timestamps and messages

--- a/Coder.AdiumMessageStyle/Contents/Resources/SASS/dark.scss
+++ b/Coder.AdiumMessageStyle/Contents/Resources/SASS/dark.scss
@@ -27,7 +27,6 @@ body {
   }
 
   // Timestamps
-  .time, .sender { margin-right: 1em; }
   .time { color: lighten($charcoal, 10%); }
 
   // Sender names
